--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "buffer": "^5.6.0",
     "elliptic": "^6.5.2",
     "ethers": "^5.0.0-beta.184",
     "js-sha3": "^0.8.0"
