--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Send and receive stealth payments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "buffer": "^5.6.0",
     "elliptic": "^6.5.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "ethers": "^5.0.0-beta.184",
     "js-sha3": "^0.8.0"
   }
