--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Send and receive stealth payments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/*.test.js --exit --timeout 10000",
     "lint": "eslint --ext .js ."
   },
   "author": "",
@@ -17,5 +17,10 @@
     "eslint-plugin-import": "^2.20.2",
     "ethers": "^5.0.0-beta.184",
     "js-sha3": "^0.8.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "mocha": "^7.1.2"
   }
 }
