--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "umbra",
-  "version": "0.1.0",
+  "name": "umbra-protocol",
+  "version": "0.0.1",
   "description": "Send and receive stealth payments",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./test/*.test.js --exit --timeout 10000",
     "lint": "eslint --ext .js ."
   },
-  "author": "",
+  "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
   "dependencies": {
     "buffer": "^5.6.0",
@@ -22,5 +22,15 @@
     "chai": "^4.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "mocha": "^7.1.2"
+  },
+  "keywords": [
+    "ethereum",
+    "privacy",
+    "payments",
+    "web3"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ScopeLift/umbra.git"
   }
 }
