--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "buffer": "^5.6.0",
+    "eccrypto": "^1.1.3",
     "elliptic": "^6.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
