--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,8 @@
     "gas-optimized": "npx oz compile --optimizer on --optimizer-runs 1 && mocha --exit --timeout 0 test/gastests.js"
   },
   "dependencies": {
-    "@openzeppelin/contracts-ethereum-package": "^2.5.0",
+    "@opengsn/gsn": "^0.9.0",
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@truffle/debug-utils": "^4.1.1",
     "dotenv": "^8.2.0",
     "truffle": "^5.1.21",
