Add lint file settings

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -21,7 +21,14 @@
     "@openzeppelin/test-environment": "^0.1.4",
     "@openzeppelin/test-helpers": "^0.5.5",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1"
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^7.1.1",
+    "prettier": "^2.0.5",
+    "prettier-plugin-solidity": "^1.0.0-alpha.51",
+    "solhint": "^3.0.0"
   },
   "author": "",
   "license": "MIT"
