--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -10,6 +10,7 @@
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
   "dependencies": {
+    "@unstoppabledomains/resolution": "^1.6.0-beta.0",
     "buffer": "^5.6.0",
     "dotenv": "^8.2.0",
     "eccrypto": "^1.1.3",
