--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -4,7 +4,7 @@
   "description": "Send and receive stealth payments",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/*.test.js --exit --timeout 0",
+    "test": "npx mocha ./test/*.test.js --exit --timeout 0",
     "lint": "eslint --ext .js .",
     "prettier": "npx prettier --write ."
   },
