Update for compatibility with OpenGSNv2 Beta
* Update contracts to conform to new interfaces and use
  new types from OpenGSN
* Fix imports in GSN related tests to be compatible with
  updates to the GSN test env modules

--- a/contracts/.openzeppelin/project.json
+++ b/contracts/.openzeppelin/project.json
@@ -9,10 +9,12 @@
   "version": "0.0.1",
   "compiler": {
     "compilerSettings": {
+      "evmVersion": "berlin",
       "optimizer": {
         "enabled": false,
         "runs": "200"
-      }
+      },
+      "evmVersion": "berlin"
     },
     "typechain": {
       "enabled": false
