--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@opengsn/gsn": "^2.0.0-beta.1.3",
-    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
+    "@openzeppelin/contracts": "^3.2.0",
     "@truffle/debug-utils": "^4.1.1",
     "dotenv": "^8.2.0",
     "truffle": "^5.1.21",
