--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "prettier": "npx prettier --write .",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "npx quasar dev"
+    "dev": "npx quasar dev",
+    "build": "npx quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -30,6 +31,8 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
+    "husky": "^4.3.0",
+    "lint-staged": ">=10",
     "prettier": "^2.1.1"
   },
   "browserslist": [
@@ -47,5 +50,14 @@
     "node": ">= 10.18.1",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn build"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "eslint --cache --fix",
+    "*.{js,ts,css,md}": "prettier --write"
   }
 }
