--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "umbra-frontend",
+  "name": "@umbra/frontend",
   "version": "0.0.1",
   "description": "Send and receive stealth payments with the Umbra protocol",
   "productName": "Umbra",
@@ -7,10 +7,11 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "prettier": "npx prettier --write .",
+    "prettier": "prettier --write .",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "npx quasar dev",
-    "build": "npx quasar build"
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "clean": "rimraf build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -27,13 +28,8 @@
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
-    "husky": "^4.3.0",
-    "lint-staged": ">=10",
-    "prettier": "^2.1.1"
+    "eslint-plugin-vue": "^6.1.2"
   },
   "browserslist": [
     "last 10 Chrome versions",
@@ -50,14 +46,5 @@
     "node": ">= 10.18.1",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && yarn build"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix",
-    "*.{js,ts,css,md}": "prettier --write"
   }
 }
