--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "umbra-js",
+  "name": "@umbra/umbra-js",
   "version": "0.0.1",
   "description": "Send and receive stealth payments",
   "main": "build/index.js",
@@ -31,14 +31,11 @@
     "@types/elliptic": "^6.4.12",
     "@types/mocha": "^8.0.4",
     "chai": "^4.2.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
-    "eslint-plugin-import": "^2.22.1",
-    "mocha": "^8.2.1",
-    "prettier": "^2.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^7.1.2",
+    "ts-node": "^9.0.0"
   },
   "keywords": [
     "ethereum",
