--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -1,21 +1,10 @@
 {
+  "extends": "../tsconfig.settings.json",
   "compilerOptions": {
+    "composite": true,
+    "outDir": "build",
     "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["es2015", "dom"],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "./build",
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "es5"
+    "emitDeclarationOnly": true
   },
   "include": ["./src/**/*"]
 }
