--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedParameters": true,
     "outDir": "./build",
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es5"
