--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -13,28 +13,28 @@
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
   "dependencies": {
-    "@unstoppabledomains/resolution": "^1.6.0-beta.0",
-    "buffer": "^5.6.0",
+    "@unstoppabledomains/resolution": "^1.8.3",
+    "buffer": "^6.0.2",
     "dotenv": "^8.2.0",
     "elliptic": "^6.5.2",
     "eth-ens-namehash": "^2.0.8",
-    "ethers": "^5.0.0-beta.184",
+    "ethers": "^5.0.21",
     "js-sha3": "^0.8.0"
   },
   "devDependencies": {
-    "@openzeppelin/test-environment": "^0.1.4",
+    "@openzeppelin/test-environment": "^0.1.6",
     "@types/chai": "^4.2.14",
     "@types/elliptic": "^6.4.12",
     "@types/mocha": "^8.0.4",
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
-    "eslint-plugin-import": "^2.20.2",
-    "mocha": "^7.1.2",
-    "prettier": "^2.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "mocha": "^8.2.1",
+    "prettier": "^2.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "keywords": [
     "ethereum",
