--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@umbra/umbra-js": "^0.0.1",
     "@vue/composition-api": "^0.6.4",
     "bnc-onboard": "^1.13.0",
     "core-js": "^3.6.5",
