--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "composite": true,
+    "rootDir": "src",
     "outDir": "build",
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
