resolve typescript-eslint errors and run lint-staged on commit

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "clean": "rimraf build"
+    "clean": "rimraf build",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
