--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -13,7 +13,8 @@
     "build": "tsc --build",
     "clean": "rimraf build",
     "prepare": "yarn build",
-    "prepublishOnly" : "yarn lint && yarn test"
+    "prepublishOnly" : "yarn lint && yarn test",
+    "precommit": "lint-staged"
   },
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
