--- a/contracts/package.json
+++ b/contracts/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf build",
     "test": "oz compile && mocha --exit --timeout 0 test/*-test.js",
     "gas": "oz compile && mocha --exit --timeout 0 test/gastests.js",
-    "gas-optimized": "oz compile --optimizer on --optimizer-runs 1 && mocha --exit --timeout 0 test/gastests.js"
+    "gas-optimized": "oz compile --optimizer on --optimizer-runs 1 && mocha --exit --timeout 0 test/gastests.js",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@opengsn/gsn": "^2.0.0-beta.1.3",
