Begin use @paulrberg template for contracts. Convert tests/gastests.js to use ethers.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
     "files": [],
-    "references": [{ "path": "frontend" }, { "path": "umbra-js" }],
+    "references": [{ "path": "frontend" }, { "path": "umbra-js" }, { "path": "contracts" }],
     "exclude": ["node_modules"]
 }
