--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -1,5 +1,21 @@
-build/
-.openzeppelin/.session
+# folders
+.coverage_artifacts/
+.coverage_cache/
+.coverage_contracts/
 artifacts/
+build/
 cache/
+coverage/
+dist/
+lib/
+node_modules/
 typechain/
+
+# files
+*.env
+*.log
+*.tsbuildinfo
+coverage.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
