--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,26 +2,6 @@
   "name": "@umbra/contracts",
   "version": "0.0.1",
   "description": "Contracts for the Umbra Protocol",
-  "scripts": {
-<<<<<<< HEAD
-    "compile": "oz compile",
-    "build:types": "typechain --target ethers-v5 --outDir ../umbra-js/types/contracts './build/contracts/*.json'",
-    "build": "yarn compile && yarn build:types",
-=======
-    "compile": "hardhat compile",
-    "build": "yarn compile",
->>>>>>> WIP: contracts compile on hardhat
-    "clean": "rimraf build",
-    "prepare": "yarn build",
-    "prettier": "prettier --write .",
-    "test": "oz compile && mocha --exit --timeout 0 test/*-test.js",
-    "gas": "oz compile && mocha --exit --timeout 0 test/gastests.js",
-    "gas-optimized": "oz compile --optimizer on --optimizer-runs 1 && mocha --exit --timeout 0 test/gastests.js",
-    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
-    "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
-    "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
-    "precommit": "lint-staged"
-  },
   "dependencies": {
     "@opengsn/gsn": "2.0.0-beta.1.3",
     "@openzeppelin/contracts": "^3.2.0",
@@ -32,34 +12,66 @@
     "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/cli": "^2.8.0",
-    "@openzeppelin/test-environment": "^0.1.4",
-    "@openzeppelin/test-helpers": "^0.5.5",
-    "@typechain/ethers-v5": "^5.0.0",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@ethersproject/abstract-signer": "^5.0.6",
+    "@ethersproject/bignumber": "^5.0.8",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@opengsn/gsn": "^2.0.0-beta.1.3",
+    "@openzeppelin/contracts": "^3.2.0",
+    "@typechain/ethers-v5": "^2.0.0",
+    "@types/chai": "^4.2.13",
+    "@types/fs-extra": "^9.0.1",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.11.8",
     "chai": "^4.2.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-chai-friendly": "^0.6.0",
-    "eslint-plugin-import": "^2.20.2",
-    "ethereum-waffle": "^3.2.1",
-    "ethers": "^5.0.24",
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "ethereum-waffle": "^3.2.0",
+    "ethers": "^5.0.17",
     "fs-extra": "^9.0.1",
-    "hardhat": "^2.0.5",
+    "hardhat": "^2.0.2",
     "hardhat-typechain": "^0.3.3",
-    "mocha": "^7.1.1",
-    "prettier": "^2.0.5",
-    "prettier-plugin-solidity": "^1.0.0-alpha.51",
-    "solhint": "^3.0.0",
+    "husky": "^4.3.0",
+    "mocha": "^8.1.3",
+    "prettier": "^2.1.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
+    "shelljs": "^0.8.4",
+    "solc": "0.7.4",
+    "solhint": "^3.2.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.13",
-    "ts-node": "^9.1.1",
-    "typechain": "^4.0.1"
+    "solidity-coverage": "^0.7.12",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^8.10.2",
+    "typechain": "^3.0.0",
+    "typescript": "^3.9.7"
   },
   "files": [
     "/contracts"
   ],
+  "keywords": [
+    "blockchain",
+    "ethereum",
+    "hardhat",
+    "smart-contracts",
+    "solidity"
+  ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "clean": "hardhat clean",
+    "compile": "hardhat compile",
+    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
+    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
+    "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint:ts": "eslint --ext .js,.ts .",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
+    "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
+    "test": "hardhat test",
+    "typechain": "hardhat typechain"
+  }
 }
