--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -13,5 +13,5 @@
     "sourceMap": true,
     "target": "es5"
   },
-  "include": ["./src/**/*", "./src/**/*.json"]
+  "include": ["./src/**/*", "./src/**/*.json", "./types/**/*"]
 }
