--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint --ext .js,.ts ./",
     "prettier": "prettier --write .",
     "watch": "tsc --watch",
-    "build:types": "typechain --target ethers-v5 --outDir types/contracts '../contracts/build/contracts/*.json'",
-    "build": "yarn build:types && tsc --build",
+    "build": "tsc --build",
     "clean": "rimraf build",
     "prepare": "yarn build",
     "prepublishOnly": "yarn lint && yarn test",
@@ -32,17 +31,16 @@
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.6",
-    "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.14",
     "@types/elliptic": "^6.4.12",
     "@types/mocha": "^8.0.4",
+    "@umbra/contracts": "^0.0.1",
     "chai": "^4.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.2",
     "mocha": "^7.1.2",
-    "ts-node": "^9.0.0",
-    "typechain": "^4.0.1"
+    "ts-node": "^9.0.0"
   },
   "keywords": [
     "ethereum",
