--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@unstoppabledomains/resolution": "^1.16.0",
+    "bn.js": "^5.1.3",
     "buffer": "^6.0.2",
     "dotenv": "^8.2.0",
     "elliptic": "^6.5.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.6",
+    "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.14",
     "@types/elliptic": "^6.4.12",
     "@types/mocha": "^8.0.4",
