--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,7 +15,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "@opengsn/gsn": "^2.0.0-beta.1.3",
+    "@opengsn/gsn": "2.0.0-beta.1.3",
     "@openzeppelin/contracts": "^3.2.0",
     "@truffle/debug-utils": "^4.1.1",
     "dotenv": "^8.2.0",
