--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -21,7 +21,7 @@
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
   "dependencies": {
-    "@unstoppabledomains/resolution": "^1.16.0",
+    "@unstoppabledomains/resolution": "1.9.0",
     "bn.js": "^5.1.3",
     "buffer": "^6.0.2",
     "dotenv": "^8.2.0",
