--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,8 +18,10 @@
     "@ethersproject/bignumber": "^5.0.8",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@opengsn/gsn": "^2.0.0-beta.1.3",
     "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/test-helpers": "^0.5.10",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.13",
     "@types/fs-extra": "^9.0.1",
