--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,10 +6,7 @@
     "@opengsn/gsn": "2.0.0-beta.1.3",
     "@openzeppelin/contracts": "^3.2.0",
     "@truffle/debug-utils": "^4.1.1",
-    "dotenv": "^8.2.0",
-    "ethers": "^5.0.24",
-    "truffle": "^5.1.21",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
@@ -17,9 +14,9 @@
     "@ethersproject/abstract-signer": "^5.0.6",
     "@ethersproject/bignumber": "^5.0.8",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@opengsn/gsn": "^2.0.0-beta.1.3",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@typechain/ethers-v5": "^2.0.0",
