--- a/contracts/package.json
+++ b/contracts/package.json
@@ -70,7 +70,7 @@
     "lint:ts": "eslint --ext .js,.ts .",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "test": "hardhat test",
+    "test": "hardhat test --network localhost",
     "typechain": "hardhat typechain"
   }
 }
