--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Contracts for the Umbra Protocol",
   "dependencies": {
-    "@opengsn/gsn": "2.0.0-beta.1.3",
+    "@opengsn/gsn": "^2.1.0",
     "@openzeppelin/contracts": "^3.2.0",
     "@truffle/debug-utils": "^4.1.1",
     "dotenv": "^8.2.0"
