contract tests stand up local node. update umbra-test.js for hardhat. volta monorepo config.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^14.11.8",
     "chai": "^4.2.0",
     "commitizen": "^4.2.1",
+    "concurrently": "^5.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
@@ -70,7 +71,10 @@
     "lint:ts": "eslint --ext .js,.ts .",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "test": "hardhat test --network localhost",
+      "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
     "typechain": "hardhat typechain"
+  },
+  "volta": {
+    "extends": "../package.json"
   }
 }
