--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,9 +44,7 @@
     "last 10 iOS versions",
     "last 5 Opera versions"
   ],
-  "engines": {
-    "node": ">= 10.18.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+  "volta": {
+    "extends": "../package.json"
   }
 }
