--- a/contracts/package.json
+++ b/contracts/package.json
@@ -71,8 +71,9 @@
     "lint:ts": "eslint --ext .js,.ts .",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
-      "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
-    "typechain": "hardhat typechain"
+    "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
+    "typechain": "hardhat typechain",
+    "postinstall": "yarn run typechain"
   },
   "volta": {
     "extends": "../package.json"
