--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@quasar/app": "^2.0.0",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
-    "@types/node": "^10.17.15",
+    "@types/node": "^12.17.15",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.0.1",
@@ -45,6 +45,6 @@
     "last 5 Opera versions"
   ],
   "volta": {
-    "extends": "../package.json"
+    "extends": "../../package.json"
   }
 }
