--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@umbra/umbra-js": "^0.0.1",
+    "@uniswap/token-lists": "^1.0.0-beta.19",
     "@vue/composition-api": "^0.6.4",
     "bnc-onboard": "^1.13.0",
     "core-js": "^3.6.5",
@@ -31,7 +32,9 @@
     "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
