Send page setup, get user token balances at login

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint": "lerna run lint",
     "prettier": "lerna run prettier",
     "prepare": "lerna run prepare",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "postinstall": "patch-package"
   },
   "husky": {
     "hooks": {
