Switched to hardhat oriented deploy methodology, got initial deploy to work
Co-authored-by: wildmolasses <changes@gmail.com>
Co-authored-by: John Feras <jferas@ferasinfotech.com>

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -74,7 +74,7 @@
     "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
-    "deploy:umbra": "hardhat compile && node scripts/deploy.js"
+    "deploy:umbra": "hardhat run scripts/deploy.js"
   },
   "volta": {
     "extends": "../package.json"
