Addressed issues raised in PR review

--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -19,6 +19,7 @@
     "artifacts/**/*",
     "artifacts/**/*.json",
     "scripts/**/*",
+    "scripts/**/*.json",
     "tasks/**/*",
     "test/**/*",
     "typechain/**/*",
