--- a/contracts/package.json
+++ b/contracts/package.json
@@ -74,7 +74,7 @@
     "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
-    "deploy:umbra": "hardhat run scripts/deploy.js"
+    "deploy": "yarn build && hardhat run scripts/deploy.js"
   },
   "volta": {
     "extends": "../package.json"
