Add Open Graph tags and frontend deploy command

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "clean": "rimraf build",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
     "@opengsn/gsn": "^2.1.0",
