--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,5 @@
     { "path": "umbra-js" },
     { "path": "contracts" }
   ],
-  "exclude": ["node_modules"],
-  "typeRoots": ["./node_modules/@types"]
+  "exclude": ["node_modules"]
 }
