Add hardhat gas reporter plugin

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -35,6 +35,7 @@
     "ethers": "^5.0.17",
     "fs-extra": "^9.0.1",
     "hardhat": "^2.0.2",
+    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
