--- a/contracts/package.json
+++ b/contracts/package.json
@@ -75,6 +75,7 @@
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
+    "test:gas": "REPORT_GAS=true yarn test",
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
     "deploy": "yarn build && hardhat run scripts/deploy.js",
