--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,9 +4,7 @@
   "description": "Contracts for the Umbra Protocol",
   "dependencies": {
     "@opengsn/gsn": "^2.1.0",
-    "@openzeppelin/contracts": "^3.2.0",
-    "@truffle/debug-utils": "^4.1.1",
-    "dotenv": "^8.2.0"
+    "@openzeppelin/contracts": "^3.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
@@ -17,8 +15,8 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.10",
+    "@truffle/debug-utils": "^4.1.1",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.13",
     "@types/fs-extra": "^9.0.1",
