--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -25,16 +25,14 @@
     "bn.js": "^5.1.3",
     "buffer": "^6.0.2",
     "dotenv": "^8.2.0",
-    "elliptic": "^6.5.4",
     "eth-ens-namehash": "^2.0.8",
     "ethers": "^5.0.25",
-    "js-sha3": "^0.8.0"
+    "noble-secp256k1": "^1.1.2"
   },
   "devDependencies": {
     "@openzeppelin/test-environment": "^0.1.6",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.14",
-    "@types/elliptic": "^6.4.12",
     "@types/mocha": "^8.0.4",
     "@umbra/contracts": "^0.0.1",
     "chai": "^4.2.0",
