--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "test": "yarn build && mocha -r ts-node/register ./test/*.test.ts --exit --timeout 0",
+    "test": "yarn build && yarn hardhat test",
     "lint": "eslint --ext .js,.ts ./",
     "prettier": "prettier --write .",
     "watch": "tsc --watch",
@@ -26,7 +26,8 @@
     "noble-secp256k1": "^1.1.2"
   },
   "devDependencies": {
-    "@openzeppelin/test-environment": "^0.1.6",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.4",
