--- a/umbra-js/.nycrc
+++ b/umbra-js/.nycrc
@@ -12,7 +12,12 @@
     "coverage/**",
     "node_modules/**",
     "**/*.d.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "src/index.ts",
+    "types/contracts/**",
+    ".eslintrc.js",
+    ".lintstagedrc.js",
+    ".prettierrc.js"
   ],
   "sourceMap": true,
   "reporter": [
