final touches on coverage and hardhat migration
Signed-off-by: wildmolasses <changes@gmail.com>

--- a/umbra-js/.nycrc
+++ b/umbra-js/.nycrc
@@ -17,7 +17,8 @@
     "types/contracts/**",
     ".eslintrc.js",
     ".lintstagedrc.js",
-    ".prettierrc.js"
+    ".prettierrc.js",
+    "hardhat.config.ts",
   ],
   "sourceMap": true,
   "reporter": [
