--- a/umbra-js/tsconfig.json
+++ b/umbra-js/tsconfig.json
@@ -10,6 +10,7 @@
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "es5"
   },
