--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "yarn build && yarn hardhat test",
-    "coverage": "yarn build && nyc yarn hardhat test",
+    "coverage": "yarn clean && yarn build && nyc yarn hardhat test",
     "lint": "eslint --ext .js,.ts ./",
     "prettier": "prettier --write .",
     "watch": "tsc --watch",
