Make GSN contract deployment configurable via env flag

--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -1,2 +1,3 @@
 INFURA_ID=zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
 MNEMONIC=here is where your twelve words mnemonic should be put my friend
+DEPLOY_GSN=false
