Add package.json script to generate docs

--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -17,7 +17,8 @@
     "clean": "rimraf build coverage .nyc_output cache",
     "prepare": "yarn build",
     "prepublishOnly": "yarn lint && yarn test",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "docs": "typedoc src/"
   },
   "author": "Matt Solomon <matt@mattsolomon.dev>, Ben DiFrancesco <ben@scopelift.co>",
   "license": "ISC",
