Remove GSN tests from core contract test suite

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -73,7 +73,8 @@
     "lint:ts": "eslint --ext .js,.ts .",
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "test": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test --network localhost\"",
+    "test": "hardhat test test/*.js",
+    "test:gsn": "concurrently --success first --kill-others \"hardhat node &>/dev/null\" \"hardhat test test/gsn/*.js --network localhost\"",
     "test:gas": "REPORT_GAS=true yarn test",
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
