--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umbra/umbra-js",
-  "version": "0.0.1-alpha.0",
+  "version": "0.1.0",
   "description": "Send and receive stealth payments",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
