Implement deployment script for StealthKeyRegistry
In addition to deploying the contract and logging the results,
the script requires the user to supply an expected deployment
address and deployment nonce. This will allow us to make sure
the registry is deployed at the same address across all relevant
networks.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -79,6 +79,7 @@
     "typechain": "hardhat typechain",
     "prepare": "yarn run typechain",
     "deploy": "yarn build && hardhat run scripts/deploy.js",
+    "deploy:registry": "yarn build && hardhat run scripts/deploy-registry.js",
     "precommit": "lint-staged"
   },
   "volta": {
