--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@metamask/jazzicon": "^2.0.0",
     "@quasar/extras": "^1.0.0",
     "@umbra/umbra-js": "^0.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.19",
