--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,13 @@
     "babel-eslint": "^10.0.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "browser": {
+    "crypto": false
   },
   "browserslist": [
     "last 10 Chrome versions",
