feat: support polygon lookup of tx from address

--- a/umbra-js/.env.example
+++ b/umbra-js/.env.example
@@ -1,1 +1,3 @@
 INFURA_ID=zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+ETHERSCAN_API_KEY=yourEtherscanApiKey
+POLYGONSCAN_API_KEY=yourPolygonscanEtherscanApiKey
