build(fix): frontend must define the env vars used by umbra-js

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,7 @@ INFURA_ID=yourKeyHere
 BLOCKNATIVE_API_KEY=yourKeyHere
 FORTMATIC_API_KEY=yourKeyHere
 PORTIS_API_KEY=yourKeyHere
+ETHERSCAN_API_KEY=yourEtherscanApiKey
+POLYGONSCAN_API_KEY=yourPolygonscanEtherscanApiKey
 LOG_LEVEL=DEBUG
 MAINTENANCE_MODE_SEND=0
