--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "lerna run lint",
     "prettier": "lerna run prettier",
     "prepare": "lerna run prepare",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "dev": "cd umbra-js && yarn build && cd ../frontend && yarn dev"
   },
   "husky": {
     "hooks": {
