--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "babel-eslint": "^10.0.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "worker-loader": "^3.0.8"
   },
   "browserslist": [
     "last 10 Chrome versions",
