Include testfiles in our TS config
Fixes:

/Users/david/Projects/umbra-protocol/frontend/test/utils.test.ts
  0:0  error  Parsing error: "parserOptions.project" has been set for @typescript-eslint/parser.
The file does not match your project config: test/utils.test.ts.
The file must be included in at least one of the projects provided

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,5 +19,5 @@
       "@sinonjs/fake-timers": ["../node_modules/@types/sinonjs__fake-timers"]
     }
   },
-  "include": ["src", "src/**/*.json"]
+  "include": ["src", "test/*", "src/**/*.json"]
 }
