Improve TS configs
rootDir=src was removed b/c we want to typecheck /test as well
skipLibCheck was added to ignore node_modules when typechecking
exclude build artifacts when typechecking

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "outDir": "build",
     "resolveJsonModule": true,
-    "rootDir": "src",
+    "skipLibCheck": true,
     "paths": {
       "src/*": ["src/*"],
       "app/*": ["*"],
@@ -19,5 +19,6 @@
       "@sinonjs/fake-timers": ["../node_modules/@types/sinonjs__fake-timers"]
     }
   },
-  "include": ["src", "test/*", "src/**/*.json"]
+  "include": ["src", "test/*", "src/**/*.json"],
+  "exclude": ["build/*"]
 }
