build: cannot build without this change due to mocha and jest conflicts
more info: https://stackoverflow.com/questions/55680391/typescript-error-ts2403-subsequent-variable-declarations-must-have-the-same-typ

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "skipLibCheck": true,
       "module": "CommonJS",
       "sourceMap": true,
       "target": "ES2018",
