--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts-periphery/lib/ds-test"]
 	path = contracts-periphery/lib/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "contracts-periphery/lib/forge-std"]
+	path = contracts-periphery/lib/forge-std
+	url = https://github.com/brockelmore/forge-std
