--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contracts-periphery/lib/forge-std"]
 	path = contracts-periphery/lib/forge-std
 	url = https://github.com/brockelmore/forge-std
+[submodule "contracts-periphery/lib/openzeppelin-contracts"]
+	path = contracts-periphery/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
