added package.json in periphery

--- a/contracts-core/package.json
+++ b/contracts-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@umbra/contracts",
+  "name": "@umbra/contracts-core",
   "version": "0.0.2",
   "description": "Contracts for the Umbra Protocol",
   "dependencies": {
