--- a/contracts-periphery/package.json
+++ b/contracts-periphery/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@umbra/contracts-periphery",
   "version": "0.0.1",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "install": "forge install"
+  }
 }
