--- a/umbra-js/package.json
+++ b/umbra-js/package.json
@@ -33,7 +33,7 @@
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
-    "@umbra/contracts": "^0.0.2",
+    "@umbra/contracts-core": "^0.0.2",
     "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^8.2.0",
